2017-02-28  Bruno Haible  <bruno@clisp.org>

	Make SINGLEMAP_MEMORY / SPVW_PURE_BLOCKS work on 64-bit platforms.
	* m4/mmap.m4 (CL_MMAP): Add a test that determines
	MMAP_FIXED_ADDRESS_HIGHEST_BIT.
	* lispbibl.d (oint_type_len, oint_addr_len, etc.): If SINGLEMAP_MEMORY
	is defined, define them according to MMAP_FIXED_ADDRESS_HIGHEST_BIT.
	(tint, aint, saint): Don't require oint_type_len, oint_addr_len to be
	literal constants.
	(SINGLEMAP_MEMORY): Define according to MMAP_FIXED_ADDRESS_HIGHEST_BIT
	and some address ranges.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-02-28  Bruno Haible  <bruno@clisp.org>

	Fix build failure with NO_MULTITHREAD_GC and GENERATIONAL_GC.
	* spvw.d (varobj_mem_region): Moved here ...
	* spvw_garcol.d (varobj_mem_region): ... from here.
	* spvw_garcol_old.d (gar_col_normal): Pass NULL to
	build_old_generation_cache.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Fix build failure with NO_MULTITHREAD_GC (leftover from 2008-10-29).
	* spvw_garcol_old.d (gar_col): Add 'level' argument.

2017-02-26  Sam Steingold  <sds@gnu.org>

	Fix bug#679: when a stream returned by MAKE-STREAM has a path,
	the stream should be an acceptable argument to TRUENAME.
	* stream.d (handle_pathname): Call TRUENAME instead of PATHNAME.
	(handle_to_stream): Set both pathname and truename.

2017-02-26  Sam Steingold  <sds@gnu.org>

	* modules/asdf/asdf.lisp: Upgrade to upstream 3.2.0.
	* Makefile.devel (ASDF_URL): Use https.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Fix error when running the ansi-tests (regression from 2016-08-26).
	* makemake.in: Use clispload.lisp instead of clispload.lsp.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Make it possible to use Makefile.devel from a source distribution.
	* Makefile.devel (SOURCES7): Add version.sh.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	maint: Add facility for testing builds in different configurations.
	* lispbibl.d: Reorganize comments about flags that can be set in CFLAGS.